src/test/ui/feature-gates/feature-gate-static-nobundle.stderr
warning: library kind `static-nobundle` has been superseded by specifying modifier `-bundle` with library kind `static`
  --> $DIR/feature-gate-static-nobundle.rs:1:22
   |
LL | #[link(name = "foo", kind = "static-nobundle")]
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0658]: kind="static-nobundle" is unstable
  --> $DIR/feature-gate-static-nobundle.rs:1:1
   |
LL | #[link(name = "foo", kind = "static-nobundle")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #37403 <https://github.com/rust-lang/rust/issues/37403> for more information
   = help: add `#![feature(static_nobundle)]` to the crate attributes to enable

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
